# concat-files-tool

./: .gitignore  LICENSE  MANUAL.md  README.md  UV_INTRODUCTION.md  pyproject.toml
concat_tool/: __init__.py  cli.py  template.txt
list_file_paths_tool/: __init__.py  cli.py
