[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "concat-tool"
version = "0.1.0"
description = "A CLI tool that concatenates multiple files into one output, separated by filename headers."
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

[project.scripts]
concat-files = "concat_tool.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["concat_tool"]
include = ["concat_tool/template.txt"]