[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file-tools"
version = "0.1.0"
description = "A collection of file manipulation tools"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

[project.scripts]
concat-files = "concat_tool.cli:main"
list-files = "list_file_paths_tool.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["concat_tool", "list_file_paths_tool"]
include = ["concat_tool/template.txt"]